graph refinement
