# docs/swagger.yaml
@@ -9,6 +9,12 @@ definitions:
       question:
         maxLength: 2000
         type: string
+      route:
+        description: путь просмотра аналитика, только контекст
+        items:
+          type: string
+        maxItems: 40
+        type: array
     required:
     - question
     type: object
